update Bus & Man with reviews and correct course box extra space

--- a/style.css
+++ b/style.css
@@ -467,6 +467,7 @@ body {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 
   gap: 20px;
+  align-items: start;
 
 }
 
